cloud-ui/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-ui
  namespace: dc-system
  labels:
    app: cloud-ui
spec:
  selector:
    app: cloud-ui
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
